<resources>
    <string name="app_name">Circles</string>
    <string name="futo">FUTO</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="set_username">Set username</string>
    <string name="not_a_member">Not a member?</string>
    <string name="resume_session">Resume session:</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_using_active_subscription">Sign Up using your active subscription</string>
    <string name="circles">Circles</string>
    <string name="groups">Groups</string>
    <string name="people">People</string>
    <string name="photos">Photos</string>
    <string name="topic_formatter">Topic: %s</string>
    <string name="last_updated_formatter">Last updated %s</string>
    <string name="my_groups">My Groups</string>
    <string name="my_people">My People</string>
    <string name="my_circles">My Circles</string>
    <string name="photo_galleries">Photo Galleries</string>
    <string name="initial_device_name">FUTO Circles (Android)</string>
    <string name="share">Share</string>
    <string name="invite_members">Invite members</string>
    <string name="invite_followers">Invite followers</string>
    <string name="invite_to_format">Invite to %s</string>
    <string name="enter_name_or_id">Enter name or userId</string>
    <string name="follow">Follow</string>
    <string name="fix">Fix</string>
    <string name="following_users">Following users</string>
    <string name="known_users">Known users</string>
    <string name="ignored_users">Ignored users</string>
    <string name="suggestions">Suggestions</string>
    <string name="requests">Requests</string>
    <string name="no_results">No results</string>
    <string name="invite">Invite</string>
    <string name="invitation_sent">Invitation sent</string>
    <string name="manage_members">Manage members</string>
    <string name="group_members_format">%s members</string>
    <string name="followers_for_format">Followers for %s</string>
    <string name="leave_group">Leave group</string>
    <string name="create_new_group">Create new group</string>
    <string name="create_new_circle">Create new circle</string>
    <string name="create_new_gallery">Create new gallery</string>
    <string name="create">Create</string>
    <string name="group_name">Group name</string>
    <string name="circle_name">Circle name</string>
    <string name="gallery_name">Gallery name</string>
    <string name="group_topic_optional">Group topic (optional)</string>
    <string name="group_topic">Group topic</string>
    <string name="upload_media_from">Upload media from</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="unexpected_error">Something went wrong</string>
    <string name="group_updated">Group updated</string>
    <string name="circle_updated">Circle updated</string>
    <string name="gallery_updated">Gallery updated</string>
    <string name="sign_up_for_free_account">Sign up for a free account</string>
    <string name="choose_a_subscription">Choose a subscription</string>
    <string name="create_a_subscription">Create a subscription</string>
    <string name="or">Or</string>
    <string name="validate_your_token">Validate your token</string>
    <string name="validate_token">Validate token</string>
    <string name="sign_up_token_format">abcd–efgh–1234–5678</string>
    <string name="sign_up_token">SignUp token</string>
    <string name="sign_up_token_explanation">In order to sign up for a service, every new user must present a valid registration token.\n\nIf you found out about the app from a friend or from the posting online, you should be able to get a signup token from the same source.</string>
    <string name="sign_up_stage_subtitle_format">Stage %1$d of %2$d</string>
    <string name="accept">Accept</string>
    <string name="accept_terms_to_continue">Accept terms to continue</string>
    <string name="discard_current_registration_progress">Discard current registration progress?</string>
    <string name="discard_current_login_progress">Discard current login progress?</string>
    <string name="validate_your_email">Validate your email</string>
    <string name="validate_email">Validate email</string>
    <string name="email">Email</string>
    <string name="validation_code">Validation code</string>
    <string name="send_validation_code">Send validation code</string>
    <string name="email_usage_explanation">Must be a currently valid and active address.\n\nDon\'t worry - we will only use this address for security and other alerts about your account. We don\'t send spam, and we don\'t sell your address.</string>
    <string name="validation_code_explanation">We sent a 6-digit code to your email address to validate your account.\n\nEnter the code here to verify that this address belongs to you.</string>
    <string name="validation_code_sent_to_format">Validation code sent to %s</string>
    <string name="upload_a_profile_photo">Upload a profile photo</string>
    <string name="display_name">Display name</string>
    <string name="save">Save</string>
    <string name="skip">Skip</string>
    <string name="display_name_explanation">Your display name is how other users on the service will identify you.\n\nThe display name must consist of at least 8 characters, including at least two letters [a–z].\n\nIf you like, you can also use the numeric digits [0–9] and/or a few special characters like the dash, underscore, and period or \"dot\".</string>
    <string name="setup_profile">Setup profile</string>
    <string name="setup_circles">Setup Circles</string>
    <string name="circle_encryption_warning">NOTE: Circle name and cover image are not encrypted</string>
    <string name="gallery_encryption_warning">NOTE: Gallery name and cover image are not encrypted</string>
    <string name="friends">Friends</string>
    <string name="family">Family</string>
    <string name="community">Community</string>
    <string name="circles_created">Circles created</string>
    <string name="root_space_name">Circles</string>
    <string name="circles_space_name">My Circles</string>
    <string name="people_space_name">My People</string>
    <string name="groups_space_name">My Groups</string>
    <string name="photos_space_name">My Photo Galleries</string>
    <string name="log_out">Log out</string>
    <string name="log_out_message">Are you sure you want to log out?</string>
    <string name="generating_recovery_key">Generating recovery key from passphrase.</string>
    <string name="creating_backup">Creating backup</string>
    <string name="removing_backup">Removing previous backup</string>
    <string name="session_is_not_created">Session is not created</string>
    <string name="backup_already_exist">Backup already exist</string>
    <string name="not_supported_stage_format">Not supported stage %s</string>
    <string name="backup_could_not_be_decrypted_with_passphrase">Backup could not be decrypted with this passphrase.</string>
    <string name="backup_could_not_be_decrypted_with_key">Backup could not be decrypted with this recovery key.</string>
    <string name="failed_to_get_restore_keys_version">Failed to get latest restore keys version.</string>
    <string name="computing_recovery_key">Computing recovery key.</string>
    <string name="downloading_keys">Downloading keys.</string>
    <string name="importing_keys">Importing keys.</string>
    <string name="loading">Loading</string>
    <string name="following_format">Following %d</string>
    <string name="followed_by_format">Followed by %d</string>
    <string name="leave">Leave</string>
    <string name="leave_group_message">Are you sure you want to leave this group?\n\nThis group is not public. You will not be able to rejoin without an invite.</string>
    <string name="select_another_admin_message">You must select another member as an \"Admin\" to be able to leave this group.</string>
    <string name="access_level">Access level</string>
    <string name="remove">Remove</string>
    <string name="ban">Ban</string>
    <string name="unban">Unban</string>
    <string name="current_members">Current members</string>
    <string name="invited_users">Invited users</string>
    <string name="banned_users">Banned users</string>
    <string name="banned">Banned</string>
    <string name="invited">Invited</string>
    <string name="admin">Admin</string>
    <string name="moderator">Moderator</string>
    <string name="user">User</string>
    <string name="cancel_invite">Cancel invite</string>
    <string name="cancel_invite_message">Are you sure you want to cancel the invite for this user?</string>
    <string name="remove_user">Remove user</string>
    <string name="remove_user_message">Are you sure you want to remove this user?</string>
    <string name="remove_user_in_room_message">Are you sure you want to remove this user?\n\nUser still be able to join by invite.</string>
    <string name="ban_user">Ban user</string>
    <string name="ban_user_message">Are you sure you want to ban this user?\n\nUser will not be able to join again.</string>
    <string name="unban_user">Unban user</string>
    <string name="unban_user_message">Are you sure you want to unban this user?\n\nUser will be able to join again.</string>
    <string name="set_access_level">Set access level</string>
    <string name="configure_group">Configure group</string>
    <string name="change_icon">Change icon</string>
    <string name="group_encryption_warning">NOTE: Group name, topic and cover image are not encrypted</string>
    <string name="create_post">Create post</string>
    <string name="create_poll">Create poll</string>
    <string name="send">Send</string>
    <string name="enter_your_message_here">Enter your message here</string>
    <string name="delete">Delete</string>
    <string name="ignore_sender">Ignore sender</string>
    <string name="report">Report</string>
    <string name="reporting_inappropriate_content">Reporting inappropriate content</string>
    <string name="reporting_message">Thank you for helping to keep this community safe and pleasant for everyone.\nThe following brief questions will help us to respond most effectively to your report.</string>
    <string name="how_inappropriate_is_the_reported_content">How inappropriate is the reported content?</string>
    <string name="report_score_explanation">0: Very mild (fart jokes, toilet humor)\n100: Illegal content(child abuse; terrorism)</string>
    <string name="which_of_the_following_categories_does_inappropriate_message_contain">Which of the following categories does inappropriate message contain?</string>
    <string name="zero">0</string>
    <string name="hundred">100</string>
    <string name="severity_formatter">Severity: %d</string>
    <string name="configure_circle">Configure circle</string>
    <string name="delete_circle">Delete circle</string>
    <string name="delete_group">Delete group</string>
    <string name="my_followers">My followers</string>
    <string name="people_i_m_following">People I\'m following</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change password</string>
    <string name="session">Session</string>
    <string name="login_sessions">Login sessions</string>
    <string name="account">Account</string>
    <string name="deactivate_my_account">Deactivate my account</string>
    <string name="save_to_device">Save to device</string>
    <string name="save_to_gallery">Save to gallery</string>
    <string name="end_poll">End poll</string>
    <string name="edit">Edit</string>
    <string name="edit_poll">Edit poll</string>
    <string name="info">Info</string>
    <string name="state_events">State events</string>
</resources>