<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/info"
        android:icon="@drawable/ic_info"
        android:title="@string/info" />

    <item
        android:id="@+id/edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit" />

    <item
        android:id="@+id/save_to_device"
        android:icon="@drawable/ic_download"
        android:title="@string/save_to_device" />

    <item
        android:id="@+id/save_to_gallery"
        android:icon="@drawable/ic_cloud_download"
        android:title="@string/save_to_gallery" />

    <item
        android:id="@+id/edit_poll"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit_poll" />

    <item
        android:id="@+id/end_poll"
        android:icon="@drawable/ic_check"
        android:title="@string/end_poll" />

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete" />

    <item
        android:id="@+id/ignore"
        android:icon="@drawable/ic_ignore"
        android:title="@string/ignore_sender" />

    <item
        android:id="@+id/report"
        android:icon="@drawable/ic_report"
        android:title="@string/report" />

</menu>