<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/muteNotifications"
        android:icon="@drawable/ic_notifications_off"
        android:title="@string/mute_notifications" />

    <item
        android:id="@+id/unMuteNotifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/unmute_notifications" />

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share"
        android:title="@string/share" />

    <item
        android:id="@+id/stateEvents"
        android:icon="@drawable/ic_info"
        android:title="@string/state_events" />

    <item
        android:id="@+id/configureGroup"
        android:icon="@drawable/ic_settings"
        android:title="@string/configure_group" />

    <item
        android:id="@+id/manageMembers"
        android:icon="@drawable/ic_round_people"
        android:title="@string/manage_members" />

    <item
        android:id="@+id/inviteMembers"
        android:icon="@drawable/ic_invite"
        android:title="@string/invite_members" />

    <item
        android:id="@+id/leaveGroup"
        android:icon="@drawable/ic_logout"
        android:title="@string/leave_group" />

    <item
        android:id="@+id/deleteGroup"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete_group" />

</menu>