<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_bottom_menu"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.futo.circles.ui.home.HomeFragment"
        android:label="@string/welcome"
        tools:layout="@layout/home_fragment" />
    <fragment
        android:id="@+id/circlesFragment"
        android:name="com.futo.circles.ui.circles.CirclesFragment"
        android:label="@string/my_circles"
        tools:layout="@layout/circles_fragment" />

    <include app:graph="@navigation/groups_nav_graph" />

    <fragment
        android:id="@+id/peopleFragment"
        android:name="com.futo.circles.ui.people.PeopleFragment"
        android:label="@string/my_people"
        tools:layout="@layout/people_fragment" />
    <fragment
        android:id="@+id/photosFragment"
        android:name="com.futo.circles.ui.photos.PhotosFragment"
        android:label="@string/photo_galleries"
        tools:layout="@layout/photos_fragment" />

</navigation>