<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="@string/reporting_inappropriate_content"
        app:titleCentered="true"
        app:titleTextAppearance="@style/subheadline">

        <org.futo.circles.core.view.LoadingButton
            android:id="@+id/btnReport"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginVertical="8dp"
            android:layout_marginEnd="8dp"
            android:enabled="false"
            android:text="@string/report"
            android:textSize="13sp"
            app:textPadding="1dp" />

    </com.google.android.material.appbar.MaterialToolbar>

    <View
        android:id="@+id/toolbarDivider"
        android:layout_width="0dp"
        android:layout_height="@dimen/divider_height"
        android:background="@color/divider_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/tvSubtitle"
        style="@style/footNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:paddingHorizontal="16dp"
        android:text="@string/reporting_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarDivider" />

    <View
        android:id="@+id/topSectorDivider"
        android:layout_width="0dp"
        android:layout_height="@dimen/divider_height"
        android:layout_marginTop="8dp"
        android:background="@color/divider_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSubtitle" />

    <TextView
        android:id="@+id/tvScoreTitle"
        style="@style/headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:paddingHorizontal="16dp"
        android:text="@string/how_inappropriate_is_the_reported_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topSectorDivider" />

    <TextView
        android:id="@+id/tvScoreMessage"
        style="@style/footNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:paddingHorizontal="16dp"
        android:text="@string/report_score_explanation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvScoreTitle" />

    <TextView
        android:id="@+id/tvZero"
        style="@style/headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="@id/scoreSlider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scoreSlider" />

    <com.google.android.material.slider.Slider
        android:id="@+id/scoreSlider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:stepSize="1.0"
        android:valueFrom="0.0"
        android:valueTo="100.0"
        app:layout_constraintEnd_toStartOf="@id/tvHundread"
        app:layout_constraintStart_toEndOf="@id/tvZero"
        app:layout_constraintTop_toBottomOf="@id/tvScoreMessage"
        app:tickVisible="false" />

    <TextView
        android:id="@+id/tvHundread"
        style="@style/headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/hundred"
        app:layout_constraintBottom_toBottomOf="@id/scoreSlider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scoreSlider" />

    <TextView
        android:id="@+id/tvSeverity"
        style="@style/headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scoreSlider"
        tools:text="@string/severity_formatter" />

    <View
        android:id="@+id/scoreBottomDivider"
        android:layout_width="0dp"
        android:layout_height="@dimen/divider_height"
        android:layout_marginTop="8dp"
        android:background="@color/divider_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSeverity" />

    <TextView
        android:id="@+id/tvCategoriesTitle"
        style="@style/headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:paddingHorizontal="16dp"
        android:text="@string/which_of_the_following_categories_does_inappropriate_message_contain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scoreBottomDivider" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategories"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCategoriesTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>